--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    <script href="script.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <input type="text" id="country">
+    <h1><b>Fetch My Country Data</b></h1><br>
+    <label for="country">Country Name :</label>
+    <input type="text" placeholder="country name" id="country"><br><br>
     <button id="btn">submit</button>
     <section id="country-info"></section>
     <section id="bordering-countries"></section>
